WIP - Retomando a construção da aplicação a partir desse comit